/**
 * PROFITHACK AI - Marketplace Population Service (Node.js gRPC)
 * Auto-generate digital products (PLR, themes, AI agents)
 * Port: 50061 | Revenue automation
 */

import * as grpc from '@grpc/grpc-js';
import * as protoLoader from '@grpc/proto-loader';
import path from 'path';
import crypto from 'crypto';

const PROTO_PATH = path.join(process.cwd(), 'grpc_services/marketplace_service/marketplace.proto');

// Load the protobuf
const packageDefinition = protoLoader.loadSync(PROTO_PATH, {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true,
});

const marketplaceProto = grpc.loadPackageDefinition(packageDefinition).marketplace as any;

/**
 * PopulateDigitalProducts RPC Implementation
 * Auto-generates marketplace products with AI
 */
function populateDigitalProducts(call: any, callback: any) {
  const { creator_user_id, count, product_category } = call.request;
  
  console.log(`üõí Marketplace Population Request: ${count} products`);
  console.log(`   Category: ${product_category} | Creator: ${creator_user_id}`);
  
  const productIds: string[] = [];
  const startTime = Date.now();
  
  // --- Product Generation Logic (Mock) ---
  // In production:
  // 1. AI generates product descriptions (GPT-4)
  // 2. AI generates product images (DALL-E 3)
  // 3. Dynamic pricing based on category
  // 4. Store in database
  
  for (let i = 0; i < count; i++) {
    const productId = `PROD-${crypto.randomBytes(8).toString('hex')}`;
    productIds.push(productId);
    
    // Simulate database write (5ms per product)
  }
  
  setTimeout(() => {
    const latency = Date.now() - startTime;
    
    console.log(`‚úÖ Generated ${count} ${product_category} products | ${latency}ms`);
    console.log(`   Creator: ${creator_user_id} | IDs: ${productIds.slice(0, 3).join(', ')}...`);
    
    callback(null, {
      success: true,
      message: `Successfully populated ${count} products in the ${product_category} category.`,
      product_ids: productIds,
    });
  }, count * 5);
}

/**
 * Start the Marketplace gRPC Server
 */
export function startMarketplaceService(port: number = 50061) {
  const server = new grpc.Server();
  
  server.addService(marketplaceProto.MarketplaceService.service, {
    PopulateDigitalProducts: populateDigitalProducts,
  });
  
  server.bindAsync(
    `0.0.0.0:${port}`,
    grpc.ServerCredentials.createInsecure(),
    (err, boundPort) => {
      if (err) {
        console.error('‚ùå Failed to start Marketplace Service:', err);
        return;
      }
      
      console.log('üõí PROFITHACK AI - Marketplace Population Service (gRPC)');
      console.log(`   Port: ${boundPort}`);
      console.log(`   Features: AI product generation, automated listings`);
      console.log(`   Categories: PLR, Themes, AI Agents, Digital Downloads`);
    }
  );
  
  return server;
}

// Start if run directly (ES module check)
if (import.meta.url === `file://${process.argv[1]}`) {
  startMarketplaceService();
}
